--- a/style.css
+++ b/style.css
@@ -8,12 +8,14 @@ body{
 
 
 .container{
-margin: 120px 0px 0px 520px;
 width: 270px;
 height: 420px;
 background-color: white;
 border-radius: 5%;
 text-align: center;
+margin-left: auto;
+margin-right: auto;
+margin-top: 100px;
 
 }
 
@@ -46,6 +48,7 @@ p{
     height: 420px;
     /* background-color: red;    */
     margin: 90px 0px 0px 50px;
+
  }
 
 
